# Rag_Miniature_On_PDF

./: README.md  main.py  pyproject.toml  requirements.txt
data/text_file/: Python_introd.txt  ml_text.txt
notebook/: document.ipynb
