[project]
name = "frrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "rapidocr>=3.8.1",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
]
